--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.projaito.android.damn_api.widget.AmazingListView xmlns:android="http://schemas.android.com/apk/res/android"
+  android:id="@+id/list"
   android:orientation="vertical"
   android:layout_width="fill_parent"
-  android:layout_height="fill_parent">
-  <TextView android:id="@+id/text"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-  />
-</ScrollView>
-
+  android:layout_height="fill_parent"
+/>
